--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.20.2",
     "@strapi/provider-upload-cloudinary": "^4.20.2",
     "@strapi/strapi": "4.20.2",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "pg-connection-string": "^2.6.2"
   },
   "author": {
     "name": "A Strapi developer"
