--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,7 @@
     "uuid": "587ab5d0-de8a-4b7c-96d9-932ef248c0aa"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
+    "node": "20",
   },
   "license": "MIT"
 }
