--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "uuid": "587ab5d0-de8a-4b7c-96d9-932ef248c0aa"
   },
   "engines": {
-    "node": "20",
+    "node": "20"
   },
   "license": "MIT"
 }
